<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.2</version>
		<relativePath/>
	</parent>

	<groupId>scead</groupId>
	<artifactId>llminthehouse-parent</artifactId>
	<version>0.0.1</version>
	<packaging>pom</packaging>

	<modules>
		<module>llminthehouse-app</module>
		<module>llminthehouse-backend</module>
		<module>llminthehouse-frontend</module>
	</modules>

	<properties>
		<java.version>24</java.version>
		<maven.compiler.source>24</maven.compiler.source>
		<maven.compiler.target>24</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<postgre-version>42.7.6</postgre-version>
		<jakarta-ws-api.version>4.0.0</jakarta-ws-api.version>
		<jakarta-servlet-api-version>6.1.0</jakarta-servlet-api-version>
		<jakarta-validation-api.version>3.1.1</jakarta-validation-api.version>
		<swagger.annotations.version>2.2.30</swagger.annotations.version>
		<jackson.verison>3.0.4</jackson.verison>
		<jackson-datatype.version>2.19.0</jackson-datatype.version>
		<jackson-datatype-nullable.version>0.2.6</jackson-datatype-nullable.version>
		<lombok.version>1.18.42</lombok.version>
		<apache-commons-lang3.version>3.17.0</apache-commons-lang3.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>${postgre-version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>jakarta.ws.rs</groupId>
				<artifactId>jakarta.ws.rs-api</artifactId>
				<version>${jakarta-ws-api.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.servlet</groupId>
				<artifactId>jakarta.servlet-api</artifactId>
				<version>${jakarta-servlet-api-version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.validation</groupId>
				<artifactId>jakarta.validation-api</artifactId>
				<version>${jakarta-validation-api.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations-jakarta</artifactId>
				<version>${swagger.annotations.version}</version>
			</dependency>
			<dependency>
				<groupId>tools.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.verison}</version>
			</dependency>
			<dependency>
				<groupId>tools.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-yaml</artifactId>
				<version>${jackson.verison}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${swagger.annotations.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.openapitools</groupId>
				<artifactId>jackson-databind-nullable</artifactId>
				<version>${jackson-datatype-nullable.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
